[gd_scene load_steps=3 format=3 uid="uid://cnva1t7elyuce"]

[ext_resource type="Script" uid="uid://biwrxmh77pnjx" path="res://scripts/hud.gd" id="1_ahhtf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_toqtt"]
bg_color = Color(1, 0.345884, 0.252034, 1)

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahhtf")

[node name="argent" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1658.0
offset_top = 51.0
offset_right = 1871.0
offset_bottom = 85.0
bbcode_enabled = true
text = "[center][font_size=24]3 000 000 $"

[node name="barreEtat" type="Control" parent="."]
anchors_preset = 0
offset_left = 488.0
offset_top = 51.0
offset_right = 1452.0
offset_bottom = 131.0

[node name="efficacite" type="Panel" parent="barreEtat"]
layout_mode = 0
offset_left = 756.0
offset_right = 942.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_toqtt")

[node name="LabelEfficacite" type="Label" parent="barreEtat/efficacite"]
layout_mode = 0
offset_left = 72.0
offset_top = 4.0
offset_right = 112.0
offset_bottom = 27.0
text = "0/100"

[node name="bonheur" type="Panel" parent="barreEtat"]
layout_mode = 0
offset_left = 523.0
offset_right = 709.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_toqtt")

[node name="Labelbonheur" type="Label" parent="barreEtat/bonheur"]
layout_mode = 0
offset_left = 72.0
offset_top = 4.0
offset_right = 112.0
offset_bottom = 27.0
text = "0/100"

[node name="pollution" type="Panel" parent="barreEtat"]
layout_mode = 0
offset_left = 291.0
offset_right = 477.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_toqtt")

[node name="LabelPollution" type="Label" parent="barreEtat/pollution"]
layout_mode = 0
offset_left = 72.0
offset_top = 4.0
offset_right = 112.0
offset_bottom = 27.0
text = "0/100"

[node name="sante" type="Panel" parent="barreEtat"]
layout_mode = 0
offset_left = 52.0
offset_right = 238.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_toqtt")

[node name="LabelSante" type="Label" parent="barreEtat/sante"]
layout_mode = 0
offset_left = 72.0
offset_top = 4.0
offset_right = 112.0
offset_bottom = 27.0
text = "0/100"

[node name="santeText" type="RichTextLabel" parent="barreEtat"]
layout_mode = 0
offset_left = 52.0
offset_top = 30.0
offset_right = 238.0
offset_bottom = 64.0
bbcode_enabled = true
text = "[center][font_size=24]Santé"

[node name="pollutionText" type="RichTextLabel" parent="barreEtat"]
layout_mode = 0
offset_left = 291.0
offset_top = 30.0
offset_right = 477.0
offset_bottom = 64.0
bbcode_enabled = true
text = "[center][font_size=24]Pollution"

[node name="bonheurText" type="RichTextLabel" parent="barreEtat"]
layout_mode = 0
offset_left = 523.0
offset_top = 30.0
offset_right = 709.0
offset_bottom = 64.0
bbcode_enabled = true
text = "[center][font_size=24]Bonheur"

[node name="efficaciteText" type="RichTextLabel" parent="barreEtat"]
layout_mode = 0
offset_left = 756.0
offset_top = 30.0
offset_right = 942.0
offset_bottom = 64.0
bbcode_enabled = true
text = "[center][font_size=24]Efficacité"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 955.0
offset_right = 245.0
offset_bottom = 1014.0
text = "SHOP"

[node name="infoHautGauche" type="Control" parent="."]
anchors_preset = 0
offset_left = 80.0
offset_top = 44.0
offset_right = 251.0
offset_bottom = 147.0

[node name="date" type="RichTextLabel" parent="infoHautGauche"]
layout_mode = 0
offset_left = -20.0
offset_top = 7.0
offset_right = 193.0
offset_bottom = 41.0
bbcode_enabled = true
text = "[center][font_size=24]XX/XX/2025"

[node name="temperature" type="RichTextLabel" parent="infoHautGauche"]
layout_mode = 0
offset_left = -20.0
offset_top = 58.0
offset_right = 193.0
offset_bottom = 92.0
bbcode_enabled = true
text = "[center][font_size=24]24 C°"
